# sd-notify

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: ffi.rs  lib.rs
tests/: listen_fds.rs  notify.rs  watchdog_enabled.rs
