[package]
name = "sd-notify"
version = "0.1.0"
authors = ["Laurențiu Nicola <lnicola@dend.ro>"]
edition = "2018"
description = "Lightweight crate for systemd service state notifications"
readme = "README.md"
keywords = ["systemd", "sd_notify"]
categories = ["os"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lnicola/sd-notify"
